# stream-api

./: .env.example  .gitignore  Cargo.toml  build_output.txt
.github/workflows/: deploy.yml
deploy/: stream-api.nginx.conf  stream-api.service
src/: auth.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs  romaji.rs  scanner.rs  worker.rs
