[package]
name = "stream-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-web-httpauth = "0.8"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"
walkdir = "2"
lofty = "0.21"
image = "0.25"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.44"
sha2 = "0.10"
regex = "1"
lindera = { version = "2", features = ["embed-ipadic"] }
wana_kana = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
